[package]
name = "us-ggg"
version = "1.0.0"
edition = "2021"
description = "A CLI tool for creating Universe Sandbox gas giants"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
eyre = "0.6.8"
fern = { version = "0.6.1", features = ["colored"] }
image = "0.24.4"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
