[package]
name = "us-ggg"
version = "2.0.0"
edition = "2021"
description = "A tool to ease creation of gas giants in Universe Sandbox"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
eyre = "0.6.8"
image = "0.24.6"
owo-colors = "3.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
zip = "0.6.4"
